--- a/media/style.css
+++ b/media/style.css
@@ -81,9 +81,9 @@ top nav
 
 #menu span{position:relative;display:block;height:1px;background:#fff;float:right;}
 
-#menu span:nth-child(1){margin-top:5px;width:80%;}
-#menu span:nth-child(2){margin-top:5px;width:60%}
-#menu span:nth-child(3){margin-top:5px;width:42%;}
+#menu span:nth-child(1){margin-top:4px;width:80%;}
+#menu span:nth-child(2){margin-top:4px;width:60%}
+#menu span:nth-child(3){margin-top:4px;width:42%;}
 
 
 #rightop{
@@ -685,6 +685,7 @@ top nav
   height: 40px;
   width:100%;
   background:transparent;
+    display: none;
 
 }
 #copyrights{
