--- a/media/style.css
+++ b/media/style.css
@@ -227,7 +227,7 @@ top nav
   float:left;
   background: transparent;
 }
-.w3-input{padding:5px;display:block;border:none;border-bottom:1px solid #fff;color:#fff;width:100%;height: 35px;margin-top: 7px;background:transparent;font-size: 15px;opacity: 0;}
+.w3-input{padding:5px;display:block;border:none;border-bottom:1px solid #fff;color:#fff;width:100%;height: 35px;margin-top: 7px;background:transparent;font-size: 15px;opacity: 0;text-transform: lowercase;}
 .w3-input:focus{
   border:none;
   border-bottom:1px solid #0099ff;
@@ -587,7 +587,7 @@ top nav
   display: none;
 }
 
-#w3-input{display:block;border:none;border-bottom:1px solid #fff;color:#fff;width:100%;height: 100%;background:transparent;font-size: 16px;}
+#w3-input{padding:10px;display:block;border:none;border-bottom:1px solid #fff;color:#fff;width:100%;height: 100%;background:transparent;font-size: 16px;text-transform: lowercase;}
 #w3-input:focus{
   border:none;
   border-bottom:1px solid #0099ff;
@@ -1069,7 +1069,9 @@ top nav
   transform: translate(-50%,-50%);
   height: 1%;
   width: 0%;
-  background: #000;
+background: -moz-linear-gradient(30deg, transparent,transparent,#000000, #000000,#000,#000, #000,#000000, transparent,transparent);
+background: -webkit-linear-gradient(30deg, transparent,transparent,#000000, #000000,#000,#000, #000,#000000, transparent,transparent);
+  background: linear-gradient(30deg,transparent,transparent,#000000, #000000,#000,#000, #000,#000000, transparent,transparent);
   opacity: .9;
   border-bottom: 1px solid #FFF;
   border-top: 1px solid #FFF;
@@ -1189,6 +1191,13 @@ top nav
 #terms p{
   padding-right: 0;
 } 
+#home{
+
+  background: -moz-linear-gradient(30deg,transparent,#000000, #000000,#000,#000, #000,#000000, transparent);
+  background: -webkit-linear-gradient(30deg, transparent,#000000, #000000,#000,#000, #000,#000000, transparent);
+  background: linear-gradient(30deg,transparent,#000000, #000000,#000,#000, #000,#000000, transparent);
+}
+
 }
 
 
