--- a/media/style.css
+++ b/media/style.css
@@ -715,7 +715,7 @@ top nav
 #name-svg{
   position: absolute;
   top: 200%;
-  left: 45%;
+  left: 50%;
   transform: translate(-50%,-50%);
   height: 300%;
   width: 300%;
@@ -724,9 +724,10 @@ top nav
   position: relative;
   top: 0%;
   left: 0%;
-  height: 50%;
+  height: 0%;
   width: 100%;
   color: #000;
+  box-shadow: 10px 0px 10px rgba(0, 0, 0, .5);
   overflow: hidden;
   background:transparent;
 
@@ -739,17 +740,21 @@ top nav
   height: 100%;
   width: 100%;
   background:transparent;
-
-
+  opacity: 0;
+  display: none;
 }
 
 #defs{
+  position: relative;
+  top: -100%;
+  left: 0%;
   color: #ffff00;
   font-size: 25px;
   text-align: center;
-  line-height: 40px;
-  margin-top: 20px;
+  line-height: 24px;
+  margin-top: 5px;
   font-family: 'Cutive Mono';
+  opacity: 0;
 }
 
 #music-ico{
@@ -760,7 +765,7 @@ top nav
   height: 100%;
   width: 400px;
   background:transparent;
-  display: none;
+  /*display: none;*/
 
 }
 
@@ -768,20 +773,37 @@ top nav
   position: absolute;
   top: 0%;
   left: 0%;
-  height: 100%;
+  height: 0%;
   width: 200px;
+  overflow: hidden;
   background:transparent;
-  border-right: 2px solid #fff;
-  display: none;
+  /*border-right: 2px solid rgba(255,255,255,.5);*/
+  /*display: none;*/
+}
+
+#music::before{
+  content: '';
+  position: absolute;
+  top: 20%;
+  left: 0%;
+  height: 60%;
+  width: 100%;
+  background:transparent;
+  border-right: 2px solid rgba(255,255,255,.5);
+  /*display: none;*/
 }
 
 #musicc{
+  position: relative;
+  left: 100%;
+  top: 0;
   color: #fff;
   text-align: center;
   line-height: 100px;
-  font-size: 25px;
-  font-weight: bold;
-  display: none;
+  font-size: 40px;
+  font-family: 'Cutive Mono';
+  font-weight: bolder;
+  /*display: none;*/
 }
 
 #music-sounds{
@@ -790,15 +812,22 @@ top nav
   left: 50%;
   height: 100%;
   width: 200px;
+  overflow: hidden;
   background:transparent;
-  display: none;
+  /*display: none;*/
 }
 
 #sounds{
-  color: #fff;
+  position: relative;
+  left: -100%;
+  top: 0;
+  color: #ff0;
   text-align: center;
   line-height: 100px;
-  font-size: 20px;
+  font-size: 27px;
+  font-family: 'Cutive Mono';
+  font-weight: bold;
+  font-style: italic;
 }
 
 #music-experiences{
@@ -807,17 +836,24 @@ top nav
   left: 50%;
   height: 100%;
   width: 200px;
+  overflow: hidden;
   background:transparent;
-  display: none;
+
 
 }
 
 
 #experiences{
-  color: #fff;
+  position: relative;
+  left: -100%;
+  top: 0;
+  color: #ff0;
   text-align: center;
   line-height: 100px;
-  font-size: 20px;
+  font-size: 27px;
+  font-family: 'Cutive Mono';
+  font-weight: bold;
+  font-style: italic;
 }
 
 #travel-ico{
@@ -827,8 +863,7 @@ top nav
   transform: translate(-50%,-50%);
   height: 100%;
   width: 400px;
-  background:#000;
-  display: none;
+  background:transparent;
 
 
 
@@ -838,21 +873,37 @@ top nav
   position: absolute;
   top: 0%;
   left: 0%;
-  height: 100%;
+  height: 0%;
   width: 200px;
-  background:#ff0;
+  overflow: hidden;
+  background:transparent;
+  overflow: hidden;
+  /*display: none;*/
 
-  display: none;
-
+}
+#travel::before{
+  content: '';
+  position: absolute;
+  top: 20%;
+  left: 0%;
+  height: 60%;
+  width: 100%;
+  background:transparent;
+  border-right: 2px solid rgba(255,255,255,.5);
+  /*display: none;*/
 }
 
 #travell{
+  position: relative;
+  left: 100%;
+  top: 0;
   color: #fff;
+  overflow: hidden;
   text-align: center;
   line-height: 100px;
-  font-size: 25px;
-  font-weight: bold;
-  display: none;
+  font-size: 40px;
+  font-family: 'Cutive Mono';
+  font-weight: bolder;
 
 }
 
@@ -862,17 +913,22 @@ top nav
   left: 50%;
   height: 100%;
   width: 200px;
-  background:#000;
+  overflow: hidden;
+  background:transparent;
   display: none;
-
 }
 
 #tours{
-  color: #fff;
+  position: relative;
+  left: -100%;
+  top: 0;
+  color:#fff;
   text-align: center;
   line-height: 100px;
-  font-size: 20px;
-  display: none;
+  font-size: 27px;
+  font-family: 'Cutive Mono';
+  font-weight: bold;
+  font-style: italic;
 
 }
 
@@ -884,18 +940,26 @@ top nav
   left: 50%;
   height: 100%;
   width: 200px;
-  background:#ff0000;
+  overflow: hidden;
+  background:transparent;
   display: none;
 
 
 }
 
 #sights{
+  position: relative;
+  left: -100%;
+  top: 0;
   color: #fff;
   text-align: center;
   line-height: 100px;
-  font-size: 20px;
+  font-size: 27px;
+  font-family: 'Cutive Mono';
+  font-weight: bold;
+  font-style: italic;
   display: none;
+
 
 }
 
@@ -906,41 +970,58 @@ top nav
   transform: translate(-50%,-50%);
   height: 100%;
   width: 400px;
-  background:#ff0;
-  display: none;
-
-
-
+  background:transparent;
 }
 
 #Photography{
   position: absolute;
   top: 0%;
   left: 0%;
-  height: 100%;
-  width: 200px;
-  background:#000;
+  height: 0%;
+  width: 250px;
+  overflow: hidden;
+  background:transparent;
+  overflow: hidden;
   display: none;
 
 
 }
+
+#Photography::before{
+  content: '';
+  position: absolute;
+  top: 20%;
+  left: 0%;
+  height: 60%;
+  width: 100%;
+  background:transparent;
+  border-right: 2px solid rgba(255,255,255,.5);
+  /*display: none;*/
+}
+
 #Photographyy{
+  position: relative;
+  left: 100%;
+  top: 0;
   color: #fff;
+  overflow: hidden;
   text-align: center;
   line-height: 100px;
-  font-size: 25px;
-  font-weight: bold;
-  display: none;
+  font-size: 30px;
+  font-family: 'Cutive Mono';
+  font-weight: bolder;
+
 
 }
 
 #Photography-nature{
   position: absolute;
   top: 0%;
-  left: 50%;
+  left: 250px;
   height: 100%;
-  width: 200px;
-  background:#000;
+  width: 150px;
+  overflow: hidden;
+  background:transparent;
   display: none;
 
 
@@ -948,21 +1029,27 @@ top nav
 
 
 #nature{
-  color: #fff;
+  position: relative;
+  left: -100%;
+  top: 0;
+  color:#1a1a1a;
   text-align: center;
   line-height: 100px;
-  font-size: 20px;
-  display: none;
+  font-size: 27px;
+  font-family: 'Cutive Mono';
+  font-weight: bold;
+  font-style: italic;
 
 }
 
 #Photography-clarity{
   position: absolute;
   top: 0%;
-  left: 50%;
+  left: 250px;
   height: 100%;
-  width: 200px;
-  background:#00ff00;
+  width: 150px;
+  overflow: hidden;
+  background:transparent;
   display: none;
 
 
@@ -970,11 +1057,17 @@ top nav
 
 
 #clarity{
-  color: #fff;
+  position: relative;
+  left: -100%;
+  top: 0;
+  color:#1a1a1a;
   text-align: center;
   line-height: 100px;
-  font-size: 20px;
-  display: none;
+  font-size: 27px;
+  font-family: 'Cutive Mono';
+  font-weight: bold;
+  font-style: italic;
+
 
 }
 
@@ -1079,6 +1172,24 @@ background: -webkit-linear-gradient(30deg, transparent,transparent,#000000, #000
 
 }
 
+@media screen and (min-width: 1185px) {
+
+
+#defs{
+  line-height: 40px;
+  margin-top: 8px;
+}
+}
+
+
+@media screen and (max-width: 1185px) {
+
+
+#defs{
+  line-height: 44px;
+  /*margin-top: 20px;*/
+}
+}
 
 @media screen and (max-width: 750px) {
 
@@ -1165,6 +1276,13 @@ background: -webkit-linear-gradient(30deg, transparent,transparent,#000000, #000
   font-size: 21px;
  /* line-height: 40px;
   margin-top: 20px;*/
+}
+
+#musicc{
+  font-size: 30px;
+}
+#sounds{
+  font-size: 25px;
 }
 #copyrights{
   width: 40%;
@@ -1287,7 +1405,7 @@ background: -webkit-linear-gradient(30deg, transparent,transparent,#000000, #000
 #defs{
   font-size: 20px;
   text-align: center;
-  line-height: 40px;
+  line-height: 30px;
   margin-top: 10px;
 }
 
@@ -1337,7 +1455,6 @@ background: -webkit-linear-gradient(30deg, transparent,transparent,#000000, #000
 #defs{
   font-size: 20px;
   text-align: center;
-  line-height: 35px;
   margin-top: 5px;
 }
 }
