--- a/media/style.css
+++ b/media/style.css
@@ -575,7 +575,7 @@ top nav
   height: 0px;
   width:50%;
   background:#000;
-  opacity: .8;
+  opacity: .9;
   overflow: hidden;
   display: none;
   z-index: 2;
@@ -1262,7 +1262,12 @@ overflow: hidden;
   left: 0;
   height: 10%;
   width: 100%;
-  background: #ff0000;
+  color: #fff;
+  font-size: 1.4em;
+  line-height: 50px;
+  font-weight: bold;
+  padding-left: 10px;
+  background: transparent;
   display: none;
 }
 
@@ -1272,7 +1277,13 @@ overflow: hidden;
   right: 0;
   height: 10%;
   width: 100%;
-  background: #ff0;
+  color: #ff0;
+  font-size: 1.4em;
+  line-height: 50px;
+  font-weight: bold;
+  text-align: right;
+  padding-right: 10px;
+  background: transparent;
   display: none;
 }
 
@@ -1620,10 +1631,14 @@ background: -webkit-linear-gradient(30deg, transparent,transparent,#999999,#fff,
 }
 
 #hidtop{
+  font-size: 17px;
+  line-height: 60px;
   display: block;
 }
 
 #hidbottom{
+   font-size: 17px;
+  line-height: 60px;
   display: block;
 }
 
@@ -1656,6 +1671,15 @@ background: -webkit-linear-gradient(30deg, transparent,transparent,#999999,#fff,
   border-top: 1px solid #fff;
   
 }
+
+.img-responsive{
+    float: left;
+}
+
+.img-responsive1{
+  float: right;
+}
+
 
 #products-defshome{
     top: 0;
@@ -1825,14 +1849,18 @@ option{
 }
 
 #hidtop{
+  font-size: 17px;
+  line-height: 40px;
   height: 10%;
   display: block;
 }
 
 
 #hidbottom{
+  font-size: 17px;
+  line-height: 40px;
   height: 10%;
-    display: block;
+  display: block;
 }
 
 #tophome{
@@ -1864,17 +1892,29 @@ option{
 
 }
 .img-responsive{
-    float: right;
+  height: 100%;
+  width: auto;
+    float: left;
 }
 
 .img-responsive1{
-  float: left;
+  height: 100%;
+  width: auto;
+  float: right;
 }
 
 
 #bottomhome{
   top: 10%;
   height: 90%;
+}
+
+#productshome{
+background:transparent;
+}
+
+#products-defshome{
+background:transparent;
 }
 
 
@@ -1899,7 +1939,7 @@ option{
   float: left;
 }
 
-  #productshome{
+#productshome{
   top: 0%;
   width: 50%;
   height: 100%;
